Fixed the width of the search bar to be a max width and the rest of the tokens will now wrap nicely. The input 'cursor' still needs to fix position

--- a/client/src/styles/searchbar.module.css
+++ b/client/src/styles/searchbar.module.css
@@ -55,6 +55,8 @@
   outline: 0; /* remove focuse border style of mac system */
   border: none;
 
+  max-width: 1000px;
+
   transition: all 0.2s linear 0s;
 }
 
@@ -106,6 +108,10 @@ input {
   white-space: nowrap;
 
   border-radius: 3px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 /* .tokenList:hover {
